--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mozc (2.28.4715.102+dfsg-2.3deepin1) unstable; urgency=medium
+
+  * Remove the following patch for libabsl 20220623 compat.
+    0011-Fix-missing-abseil-gyp-link-settings.patch
+
+ -- Tianyu Chen <sweetyfish@deepin.org>  Tue, 24 Sep 2024 13:33:37 +0800
+
 mozc (2.28.4715.102+dfsg-2.3) unstable; urgency=medium
 
   [ Gunnar Hjalmarsson ]
